<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.home.about_us.AboutUsFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"

            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                app:contentScrim="@color/my_dark_blue"
                app:layout_collapseMode="parallax"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    app:layout_collapseMode="parallax">


                    <com.github.florent37.diagonallayout.DiagonalLayout
                        android:id="@+id/diagonal_lay"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_250sdp"

                        app:diagonal_angle="20"
                        app:diagonal_direction="right"
                        app:diagonal_position="bottom"
                        app:layout_constraintTop_toTopOf="parent">


                        <ImageView
                            android:id="@+id/profile_bg"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white"
                            android:scaleType="centerCrop"
                            android:src="@color/black" />

                    </com.github.florent37.diagonallayout.DiagonalLayout>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="@dimen/_130sdp"
                        android:layout_height="@dimen/_130sdp"
                        android:layout_marginStart="@dimen/_11sdp"
                        android:layout_marginTop="@dimen/_60sdp"
                        android:elevation="1dp"
                        app:cardCornerRadius="@dimen/_100sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/profile"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white"
                            android:backgroundTint="@color/white"
                            android:src="@drawable/me" />
                    </com.google.android.material.card.MaterialCardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/person_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/your_name"
                    android:textColor="@color/my_dark_blue"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/profession"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/your_profession"
                    android:textColor="@color/my_dark_blue"
                    android:textSize="@dimen/_11sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/person_name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/your_age"
                    android:textColor="@color/my_dark_blue"
                    android:textSize="@dimen/_11sdp"
                    app:layout_constraintStart_toEndOf="@id/profession"
                    app:layout_constraintTop_toBottomOf="@id/person_name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/your_gender"
                    android:textColor="@color/my_dark_blue"
                    android:textSize="@dimen/_11sdp"
                    app:layout_constraintStart_toEndOf="@id/age"
                    app:layout_constraintTop_toBottomOf="@id/person_name" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/gender"
                    android:padding="@dimen/_11sdp"
                    android:paddingStart="@dimen/_16sdp"
                    android:orientation="horizontal"
                    android:id="@+id/social_layout"
                    >

                    <ImageButton
                        android:id="@+id/instagram"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_instagram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                    <ImageButton
                        android:id="@+id/linkedin"

                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_linkedin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                    <ImageButton
                        android:id="@+id/youtube"

                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_youtube"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                    <ImageButton
                        android:id="@+id/stack_overflow"

                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_stack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                    <ImageButton
                        android:id="@+id/github"

                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_github"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </androidx.appcompat.widget.LinearLayoutCompat>




                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="Overview"
                    android:textColor="@color/my_dark_blue"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/social_layout"
                    />

                <androidx.appcompat.widget.AppCompatTextView

                    android:id="@+id/about_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/about_me"
                    android:textColor="@color/my_dark_blue"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/overview"

                    />



            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

